Add buildKonfig